Test improvements